--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#4B0082</color>
+    <color name="purplelight">#9F70FD</color>
+    <color name="orangelight">#FDBF60</color>
+    <color name="orange">#FF8911</color>
 </resources>
