--- a/app/src/main/res/layout/activity_pantallados.xml
+++ b/app/src/main/res/layout/activity_pantallados.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".pantallados">
 
    <LinearLayout
        android:layout_width="wrap_content"
@@ -50,19 +50,19 @@
         </Button>
 
     </LinearLayout>
-        <Button
-            android:id="@+id/btn3"
-            android:layout_width="250dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="20sp"
-            android:text="@string/user2"
-            android:textAllCaps="false"
-            >
 
-        </Button>
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="20sp"
+        android:text="@string/send"
+        android:textAllCaps="false"
+        >
 
+    </Button>
 </LinearLayout>
