Pantalla Dos Front

--- a/app/src/main/res/layout/activity_pantallados.xml
+++ b/app/src/main/res/layout/activity_pantallados.xml
@@ -13,56 +13,19 @@
        android:orientation="vertical"
        android:layout_gravity="center">
 
-
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:id="@+id/usuario"
+           android:id="@+id/usuarioDos"
            android:text="@string/user"
            android:textColor="@color/orangelight"
-           />
+        />
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/textoAnterior"
+           android:text="@string/user"
+           android:textColor="@color/orangelight"
+        />
    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
-
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn1"
-            android:text="@string/btn1"
-            android:textColor="@color/orangelight"
-            >
-
-        </Button>
-
-        <Button
-            android:id="@+id/btn2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/btn2"
-            android:textColor="@color/orangelight">
-
-        </Button>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="20sp"
-        android:text="@string/send"
-        android:textAllCaps="false"
-        >
-
-    </Button>
 </LinearLayout>
